Fix poor contrast in autocompletes

--- a/steffunky-backoffice-dark-theme-base/scss/base.scss
+++ b/steffunky-backoffice-dark-theme-base/scss/base.scss
@@ -148,7 +148,11 @@ $ibo-input-select-wrapper--after--color: $ibo-color-secondary-200;
 $ibo-input-select--action-button--color: $ibo-input-select-wrapper--after--color;
 $ibo-input-select-selectize--item--active--text-color: $ibo-color-grey-100;
 $ibo-input-select-selectize--item--active--background-color: $ibo-color-grey-500;
+$ibo-input-select--autocomplete-item-image--background-color: $ibo-color-grey-800;
 $ibo-vendors-selectize-input--color: $ibo-body-text-color;
+$ibo-vendors-selectize-control--plugin-add-button--add-option--color: $ibo-input-select--action-button--color;
+$ibo-vendors-selectize--dropdown--background-color: $ibo-color-grey-500;
+$ibo-vendors-selectize--dropdown--color: $ibo-color-grey-300;
 
 $ibo-popover-menu--item-separator--background-color: $ibo-color-grey-500;
 $ibo-popover-menu--item--text-color: $ibo-color-white-100;
